--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h1>TEST</h1>
             </div>
             <div class="intro-center">
-                <h4><span>01</span> Who We Are Are We Here</h4>
+                <h4><span>01</span> Who We Are</h4>
 
             </div>
             <div class="intro-right">
