adding css and intro content

--- a/index.html
+++ b/index.html
@@ -54,14 +54,22 @@
 
         <div class="flex-container intro">
             <div class="intro-left">
-                <h1>TEST</h1>
+                <img src="assets/img/logo-sm.png" alt="">
             </div>
             <div class="intro-center">
-                <h4><span>01</span> Who We Are</h4>
-
+                <h4 class="intro-center-sub-title"><span>01</span>Who We Are</h4>
+                <h1 class="intro-center-title"><span>We Make Designs that</span> <br> <span>Lead and Inpire.</span></h1>
             </div>
             <div class="intro-right">
                 <img src="assets/img/dark-blue.svg" alt="">
+                <div class="flex-container arrow">
+                    <div class="arrow-left">
+                        <img src="assets/img/arrw-prev.svg" alt="">
+                    </div>
+                    <div class="arrow-right">
+                        <img src="assets/img/arrw-next.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
 
