--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <!-- Aos Animation Library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- Slicker Slider -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -73,8 +76,38 @@
             </div>
         </div>
 
+        <div class="flex-container slider">
+            <div class="left-slider">
+                
+            </div>
+            <div class="right-slider">
+                <section class="test slider">
+                    <div>
+                        <img src="assets/img/slider-img-1.png">
+                    </div>
+                    <div>
+                        <img src="assets/img/slider-img-1.png">
+                    </div>
+                    <div>
+                        <img src="assets/img/slider-img-1.png">
+                    </div>
+                  </section>
+            </div>
+        </div>
+
     </section>
 
+
+
+        <!-- Slicker Slider -->
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.slider').slick();
+        });
+      </script>
 
 
 
