--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 
             </div>
             <div class="right-slider">
-                <section class="test slider">
+                <div class="flex-container slider-img">
                     <div>
                         <img src="assets/img/slider-img-1.png">
                     </div>
@@ -91,7 +91,7 @@
                     <div>
                         <img src="assets/img/slider-img-1.png">
                     </div>
-                  </section>
+                </div>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
 
     <script type="text/javascript">
         $(document).ready(function(){
-            $('.slider').slick();
+            $('.slider-img').slick();
         });
       </script>
 
