--- a/index.html
+++ b/index.html
@@ -54,16 +54,15 @@
     </section>
 
     <section id="intro">
-
-        <div class="flex-container intro">
-            <div class="intro-left">
+        <div class="flex-container header">
+            <div class="header-left">
                 <img src="assets/img/logo-sm.png" alt="">
             </div>
-            <div class="intro-center">
-                <h4 class="intro-center-sub-title"><span>01</span>Who We Are</h4>
-                <h1 class="intro-center-title"><span>We Make Designs that</span> <br> <span>Lead and Inpire.</span></h1>
+            <div class="header-center">
+                <h4 class="header-center-sub-title"><span>01</span>Who We Are</h4>
+                <h1 class="header-center-title"><span>We Make Designs that</span> <br> <span>Lead and Inpire.</span></h1>
             </div>
-            <div class="intro-right">
+            <div class="header-right">
                 <img src="assets/img/dark-blue.svg" alt="">
                 <div class="flex-container arrow">
                     <div class="arrow-left">
@@ -96,6 +95,158 @@
             </div>
         </div>
 
+        <div class="flex-container desc">
+            <div class="desc-left-side">
+                <div class="side-line"></div>
+            </div>
+            <div class="desc-center-side">
+                <h1 class="hero-title"><span>A design team building a curated </span><br><span>marketplace for UI designers.</span></h1>
+                <p class="hero-text">4,404 curated design resources to energize your creative workflow. We're a growing family of 334,531 designers and makers from around the world</p>
+                <div class="btn-cta btn-blue">
+                    Contact Us
+                </div>
+            </div>
+            <div class="desc-right-side"> 
+                <div class="circle-brand">
+                    <div class="number-brand">28</div>
+                    <div class="text-brand">Biggest Branding</div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section id="recent-work">
+        <div class="flex-container header head-light">
+            <div class="header-left">
+                <img src="assets/img/logo-sm.png" alt="">
+            </div>
+            <div class="header-center">
+                <h4 class="header-center-sub-title"><span>02</span>You may also like</h4>
+                <h1 class="header-center-title"><span>Recent Works</h1>
+                <p class="hero-text">Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+            </div>
+            <div class="header-right">
+            </div>
+        </div>
+
+        <div class="flex-container recent-list">
+            <div class="left-list">
+                <div class="list-catalog">
+                    <div class="featured-list">Featured Product</div>
+                    <img class="arrow-link" src="assets/img/arrw-next-black.svg" alt="">
+                    <img class="centered-list-image" src="assets/img/list-project-1.png" alt="">
+                    <div class="text-catalog">
+                        <h1 class="title-head-list">Bento 3D Illustration</h1>
+                        <p class="text-body-list">Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="right-list">
+                <div class="list-catalog">
+                    <img class="arrow-link" src="assets/img/arrw-next-black.svg" alt="">
+                    <img class="centered-list-image" src="assets/img/list-project-2.png" alt="">
+                    <div class="text-catalog">
+                        <h1 class="title-head-list">Bento Vol.3</h1>
+                        <p class="text-body-list">Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="numbers">
+        <div class="flex-container header">
+            <div class="header-left">
+                <img src="assets/img/logo-sm.png" alt="">
+            </div>
+            <div class="header-center">
+                <h4 class="header-center-sub-title"><span>03</span>Folio Agency</h4>
+                <h1 class="header-center-title">By the Numbers.</h1>
+            </div>
+            <div class="header-right">
+                <img src="assets/img/dark-blue.svg" alt="">
+            </div>
+        </div>
+
+        <div class="flex-container design-number">
+            <div class="left-design-number">
+                <div class="top-section-number">
+                    <div class="number-brand">20</div>
+                    <div class="text-brand">Pre-build Scenes</div>
+                </div>
+                <div class="divider"></div>
+                <div class="bottom-section-number">
+                    <div class="hero-text">Bento is the first fully editable, 3D visual design system with global auto-updatable style guides built right in Figma.</div>
+                    <div class="flex-container btn-group">
+                        <img src="assets/img/arrw-down.svg" alt="">
+                        <div class="btn-text">Download</div>
+                    </div>
+                </div>
+            </div>
+            <div class="right-design-number">
+                <div class="top-section-number">
+                    <div class="number-group">
+                        <div class="number-brand">40</div>
+                        <div class="number-plus-icon">+</div>
+                    </div>
+                    <div class="text-brand">Scene Objects</div>
+                </div>
+                <div class="divider"></div>
+                <div class="bottom-section-number">
+                    <div class="hero-text">Bento is the first fully editable, 3D visual design system with global auto-updatable style guides built right in Figma.</div>
+                    <div class="flex-container btn-group">
+                        <img src="assets/img/arrw-down.svg" alt="">
+                        <div class="btn-text">Download</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="flex-container slider">
+            <div class="left-slider-control">
+                <div class="arrow-left">
+                    <img src="assets/img/arrw-prev.svg" alt="">
+                </div>
+            </div>
+            <div class="flex-container slider-img-number">
+                <div>
+                    <img src="assets/img/slider-img-1.png">
+                </div>
+                <div>
+                    <img src="assets/img/slider-img-2.png">
+                </div>
+                <div>
+                    <img src="assets/img/slider-img-3.png">
+                </div>
+                <div>
+                    <img src="assets/img/slider-img-1.png">
+                </div>
+                <div>
+                    <img src="assets/img/slider-img-2.png">
+                </div>
+            </div>
+            <div class="right-slider-control">
+                <div class="arrow-right">
+                    <img src="assets/img/arrw-next.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="jobs">
+        <div class="flex-container header head-light">
+            <div class="header-left">
+                <img src="assets/img/logo-sm.png" alt="">
+            </div>
+            <div class="header-center">
+                <h4 class="header-center-sub-title"><span>02</span>You may also like</h4>
+                <h1 class="header-center-title"><span>Recent Works</h1>
+                <p class="hero-text">Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+            </div>
+            <div class="header-right">
+            </div>
+        </div>
     </section>
 
 
@@ -106,14 +257,25 @@
 
     <script type="text/javascript">
         $(document).ready(function(){
+
+            $('.slider-img-number').slick({
+                prevArrow: $('.arrow-left')[1],
+                nextArrow: $('.arrow-right')[1],
+                autoplay:true
+            });
+
+
             $('.slider-img').slick({
                 prevArrow: $('.arrow-left')[0],
                 nextArrow: $('.arrow-right')[0],
                 dots:true,
+                autoplay:true,
                 customPaging: function(slick,index) {
                 return '<a class="item-slider">' + (index + 2017) + '</a>';
                 }
             });
+
+
         });
       </script>
 
