--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
             <div class="header-center">
                 <h4 class="header-center-sub-title"><span>02</span>You may also like</h4>
-                <h1 class="header-center-title"><span>Recent Works</h1>
+                <h1 class="header-center-title"><span>Jobs</h1>
                 <p class="hero-text">Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
             </div>
             <div class="header-right">
