--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </section>
 
     <section id="numbers">
-        <div class="flex-container header">
+        <div class="flex-container header head-dark">
             <div class="header-left">
                 <img src="assets/img/logo-sm.png" alt="">
             </div>
@@ -240,12 +240,16 @@
                 <img src="assets/img/logo-sm.png" alt="">
             </div>
             <div class="header-center">
-                <h4 class="header-center-sub-title"><span>02</span>You may also like</h4>
+                <h4 class="header-center-sub-title"><span>04</span>You may also like</h4>
                 <h1 class="header-center-title"><span>Jobs</h1>
                 <p class="hero-text">Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
             </div>
             <div class="header-right">
             </div>
+        </div>
+
+        <div class="flex-container">
+            
         </div>
     </section>
 
