Adding hello section

--- a/index.html
+++ b/index.html
@@ -243,14 +243,74 @@
                 <h4 class="header-center-sub-title"><span>04</span>You may also like</h4>
                 <h1 class="header-center-title"><span>Jobs</h1>
                 <p class="hero-text">Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+                <div class="flex-container available-jobs">
+                    <div class="arrow-right">
+                        <img src="assets/img/arrw-next.svg" alt="">
+                    </div>
+                    <p class="hero-text">Available Jobs</p>
+                </div>
             </div>
             <div class="header-right">
+                <div class="flex-container jobs-list">
+                    <div class="flex-container jobs-box">
+                        <h1 class="header-center-title"><span>Graphic Designer</h1>
+                        <p class="hero-text">2 Years Experience</p>
+                        <div class="arrow-right">
+                            <img src="assets/img/arrw-next-black.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="flex-container jobs-box">
+                        <h1 class="header-center-title"><span>Visual Designer</h1>
+                        <p class="hero-text">2 Years Experience</p>
+                        <div class="arrow-right">
+                            <img src="assets/img/arrw-next-black.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="flex-container jobs-box">
+                        <h1 class="header-center-title"><span>Art Designer</h1>
+                        <p class="hero-text">2 Years Experience</p>
+                        <div class="arrow-right">
+                            <img src="assets/img/arrw-next-black.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="flex-container jobs-box">
+                        <h1 class="header-center-title"><span>Web Designer</h1>
+                        <p class="hero-text">2 Years Experience</p>
+                        <div class="arrow-right">
+                            <img src="assets/img/arrw-next-black.svg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </section>
 
-        <div class="flex-container">
-            
+    <section id="hello">
+        <div class="flex-container hello">
+            <div class="header-hello">
+                <img src="assets/img/logo-sm.png" alt="">
+                <p>Say Hello</p>
+                <h1><span>A design team building a curated </span><br><span>marketplace for UI designers.</span></h1>
+            </div>
+            <div class="flex-container hello-footer">
+                <div class="left-hello">
+                    <h1><span>Let’s talk</span><br><span>about your</span><br><span>next project</span></h1>
+                </div>
+                <div class="right-hello">
+                    <img class="icon" src="assets/img/talk.png" alt="">
+                    <div class="flex-container talk-hello">
+                        <h1><span>Invest in your designs </span><br><span>today!</span></h1>
+                        <div class="arrow-right">
+                            <img src="assets/img/arrw-next-black.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </section>
+
+    <section id="footer">
+        
     </section>
 
 
