Finishing dekstop version

--- a/index.html
+++ b/index.html
@@ -310,7 +310,31 @@
     </section>
 
     <section id="footer">
-        
+        <div class="flex-container footer">
+            <img src="assets/img/logo.png" alt="">
+            <p>Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
+            <div class="flex-container navbar">
+                <div class="navbar-item">
+                    <a href="" class="navbar-link activee">About</a>
+                    <a href="" class="navbar-link">Work</a>
+                    <a href="" class="navbar-link">Services</a>
+                    <a href="" class="navbar-link">Jobs</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="flex-container footer-bottom">
+            <div class="left-footer">
+                <p>@ 2020, UI8 LLC.</p>
+            </div>
+            <div class="center-footer"></div>
+            <div class="right-footer">
+                <p>Follow Us</p>
+                <img src="assets/img/facebook.svg" alt="">
+                <img src="assets/img/youtube.svg" alt="">
+                <img src="assets/img/instagram.svg" alt="">
+            </div>
+        </div>
     </section>
 
 
